# LuessiawMNE

./: .gitignore  README.md  pyproject.toml
examples/: example_1.py  example_2.py  example_3.py
src/LuessiawMNE/: LuessiawSolver.py  __init__.py  exceptions.py  maths.py  tools.py
src/MEGssiaw/: __init__.py  exceptions.py  mainSolver.py  maths.py  tools.py  version.py  visualise.py
