[project]
name = "MEGssiaw"
version = "0.1.0"
description = "MEG source imaging tools"
authors = [
    {name = "Luessiaw"}
]
readme = "README.md"
requires-python = ">=3.9"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]